--- a/XamdroidCustomComponents/XamdroidCustomComponents.csproj
+++ b/XamdroidCustomComponents/XamdroidCustomComponents.csproj
@@ -54,6 +54,7 @@
     <Compile Include="CustomComponents\LengthPicker.cs" />
     <Compile Include="CustomComponents\LengthPickerArgs.cs" />
     <Compile Include="CustomComponents\PhotoSpiral.cs" />
+    <Compile Include="CustomComponents\Pizza.cs" />
     <Compile Include="CustomComponents\SquareView.cs" />
     <Compile Include="MainActivity.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
@@ -68,6 +69,9 @@
     <None Include="Resources\AboutResources.txt" />
     <None Include="Assets\AboutAssets.txt" />
     <AndroidResource Include="Resources\layout\LengthPicker.axml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
+    <AndroidResource Include="Resources\values\attributes.axml">
       <SubType>Designer</SubType>
     </AndroidResource>
   </ItemGroup>
